# watson-nlp

./: .gitignore  LICENSE  Pipfile  Procfile  README.md  pyproject.toml  requirements.txt
fiat_nlp/: app.py  cars.py  utils.py  watson_nlu.py  watson_stt.py
